Fix gap on favs page

--- a/src/pages/FavoritesPage/FavoritesPage.module.css
+++ b/src/pages/FavoritesPage/FavoritesPage.module.css
@@ -5,5 +5,4 @@
   justify-content: center;
   width: 100%;
   padding: 0px 1rem;
-  gap: 1rem;
 }
